--- a/json test.html
+++ b/json test.html
@@ -19,6 +19,12 @@
             "employed":true,
             "child":[{"name":"johnny","age":10},{"name":"misty","age":18},{"name":"jabu","age":5}]
         }
+        var person1 = {
+            "name":"niko",
+            "Surname":"Epps",
+            "age":22,
+            "Home":"Canada"
+        }
         
         person.name = "Tony";
         document.write("Name: ",person.name);
