--- a/json test.html
+++ b/json test.html
@@ -26,7 +26,7 @@
             "Home":"Canada"
         }
         
-        person.name = "Tony";
+        person.name = "Tony"
         document.write("Name: ",person.name);
             document.write("<br/ >");
             document.write("<br/>");
